Fix: spacing around range slider

--- a/css/style.css
+++ b/css/style.css
@@ -128,6 +128,8 @@ header p {
 .range-wrapper {
   width: 100%;
   position: relative;
+  margin-top: 2em;
+  margin-bottom: 2.5em;
 }
 
 #pageviews-slider {
